[gd_scene load_steps=10 format=2]

[ext_resource path="res://GFX/Ships/Ship.png" type="Texture" id=1]
[ext_resource path="res://Player/PlayerShip.gd" type="Script" id=2]
[ext_resource path="res://GFX/0010.png" type="Texture" id=3]
[ext_resource path="res://GFX/0011.png" type="Texture" id=4]
[ext_resource path="res://GFX/0012.png" type="Texture" id=5]
[ext_resource path="res://SFX/ambiance_ship_loops_07.wav" type="AudioStream" id=6]
[ext_resource path="res://GFX/light.png" type="Texture" id=7]

[sub_resource type="AnimatedTexture" id=1]
flags = 4
frames = 4
fps = 10.0
frame_0/texture = ExtResource( 3 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 4 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 5 )
frame_3/delay_sec = 0.0

[sub_resource type="Animation" id=2]
resource_name = "Invulnerable"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false ]
}

[node name="Player" type="KinematicBody2D" groups=[
"SHIP",
]]
collision_mask = 12
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Cannon 1" type="Position2D" parent="."]
position = Vector2( -20.0409, -0.580872 )

[node name="Cannon 2" type="Position2D" parent="."]
position = Vector2( 20.2244, -0.573272 )

[node name="Bullet_rate" type="Timer" parent="."]
wait_time = 0.07
one_shot = true

[node name="CPUParticles2D3" type="CPUParticles2D" parent="."]
position = Vector2( 0.249586, 17.6586 )
amount = 10
texture = SubResource( 1 )
emission_shape = 1
emission_sphere_radius = 8.31
scale_amount = 0.3

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -20.545, 0.817587, -24.5565, 12.498, -20.781, 18.2793, -16.4156, 15.8016, -15.8257, 17.8073, -8.27466, 12.734, -6.97684, 17.8073, 6.70934, 18.8692, 8.71508, 13.3239, 14.0244, 17.6893, 16.62, 15.9196, 21.4574, 18.6332, 24.9969, 14.5038, 21.1034, 0.699602, 18.6258, 0.34565, 15.2042, 8.13261, 7.65322, 2.46937, 16.502, -4.25574, 16.502, -7.67728, 13.7884, -7.67728, 7.7712, -5.55356, 1.40005, -15.7002, -2.0215, -15.7002, -8.39265, -5.43558, -15.4717, -8.14922, -17.5954, -5.43558, -10.7523, 0.581619, -9.92645, 1.52549, -7.21281, -0.48024, -5.79699, 1.40751, -14.0559, 7.89665, -18.0674, 1.52549 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Invulnerable = SubResource( 2 )

[node name="Invulnerability_Time" type="Timer" parent="."]
wait_time = 0.5

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -0.167648, 2.08996 )
scale = Vector2( 0.0565329, 0.0450118 )
texture = ExtResource( 7 )
[connection signal="timeout" from="Invulnerability_Time" to="." method="_on_Invulnerability_Time_timeout"]
